src/freeRTOS/wrapper.rs

pub type TaskHandle_t = *mut tskTaskControlBlock;
pub type ConstTaskHandle_t = *const tskTaskControlBlock;
pub type TaskHookFunction_t =
    ::std::option::Option<unsafe extern "C" fn(arg: *mut ::std::os::raw::c_void) -> BaseType_t>;
pub const eTaskState_eRunning: eTaskState = 0;
pub const eTaskState_eReady: eTaskState = 1;
pub const eTaskState_eBlocked: eTaskState = 2;
pub const eTaskState_eSuspended: eTaskState = 3;
pub const eTaskState_eDeleted: eTaskState = 4;
pub const eTaskState_eInvalid: eTaskState = 5;
pub type eTaskState = ::std::os::raw::c_uint;
pub const eNotifyAction_eNoAction: eNotifyAction = 0;
pub const eNotifyAction_eSetBits: eNotifyAction = 1;
pub const eNotifyAction_eIncrement: eNotifyAction = 2;
pub const eNotifyAction_eSetValueWithOverwrite: eNotifyAction = 3;
pub const eNotifyAction_eSetValueWithoutOverwrite: eNotifyAction = 4;
pub type eNotifyAction = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xTIME_OUT {
    pub xOverflowCount: BaseType_t,
    pub xTimeOnEntering: TickType_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of xTIME_OUT"][::std::mem::size_of::<xTIME_OUT>() - 16usize];
    ["Alignment of xTIME_OUT"][::std::mem::align_of::<xTIME_OUT>() - 8usize];
    ["Offset of field: xTIME_OUT::xOverflowCount"]
        [::std::mem::offset_of!(xTIME_OUT, xOverflowCount) - 0usize];
    ["Offset of field: xTIME_OUT::xTimeOnEntering"]
        [::std::mem::offset_of!(xTIME_OUT, xTimeOnEntering) - 8usize];
};
pub type TimeOut_t = xTIME_OUT;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xMEMORY_REGION {
    pub pvBaseAddress: *mut ::std::os::raw::c_void,
    pub ulLengthInBytes: u32,
    pub ulParameters: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of xMEMORY_REGION"][::std::mem::size_of::<xMEMORY_REGION>() - 16usize];
    ["Alignment of xMEMORY_REGION"][::std::mem::align_of::<xMEMORY_REGION>() - 8usize];
    ["Offset of field: xMEMORY_REGION::pvBaseAddress"]
        [::std::mem::offset_of!(xMEMORY_REGION, pvBaseAddress) - 0usize];
    ["Offset of field: xMEMORY_REGION::ulLengthInBytes"]
        [::std::mem::offset_of!(xMEMORY_REGION, ulLengthInBytes) - 8usize];
    ["Offset of field: xMEMORY_REGION::ulParameters"]
        [::std::mem::offset_of!(xMEMORY_REGION, ulParameters) - 12usize];
};
pub type MemoryRegion_t = xMEMORY_REGION;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xTASK_PARAMETERS {
    pub pvTaskCode: TaskFunction_t,
    pub pcName: *const ::std::os::raw::c_char,
    pub usStackDepth: usize,
    pub pvParameters: *mut ::std::os::raw::c_void,
    pub uxPriority: UBaseType_t,
    pub puxStackBuffer: *mut StackType_t,
    pub xRegions: [MemoryRegion_t; 1usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of xTASK_PARAMETERS"][::std::mem::size_of::<xTASK_PARAMETERS>() - 64usize];
    ["Alignment of xTASK_PARAMETERS"][::std::mem::align_of::<xTASK_PARAMETERS>() - 8usize];
    ["Offset of field: xTASK_PARAMETERS::pvTaskCode"]
        [::std::mem::offset_of!(xTASK_PARAMETERS, pvTaskCode) - 0usize];
    ["Offset of field: xTASK_PARAMETERS::pcName"]
        [::std::mem::offset_of!(xTASK_PARAMETERS, pcName) - 8usize];
    ["Offset of field: xTASK_PARAMETERS::usStackDepth"]
        [::std::mem::offset_of!(xTASK_PARAMETERS, usStackDepth) - 16usize];
    ["Offset of field: xTASK_PARAMETERS::pvParameters"]
        [::std::mem::offset_of!(xTASK_PARAMETERS, pvParameters) - 24usize];
    ["Offset of field: xTASK_PARAMETERS::uxPriority"]
        [::std::mem::offset_of!(xTASK_PARAMETERS, uxPriority) - 32usize];
    ["Offset of field: xTASK_PARAMETERS::puxStackBuffer"]
        [::std::mem::offset_of!(xTASK_PARAMETERS, puxStackBuffer) - 40usize];
    ["Offset of field: xTASK_PARAMETERS::xRegions"]
        [::std::mem::offset_of!(xTASK_PARAMETERS, xRegions) - 48usize];
};
pub type TaskParameters_t = xTASK_PARAMETERS;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xTASK_STATUS {
    pub xHandle: TaskHandle_t,
    pub pcTaskName: *const ::std::os::raw::c_char,
    pub xTaskNumber: UBaseType_t,
    pub eCurrentState: eTaskState,
    pub uxCurrentPriority: UBaseType_t,
    pub uxBasePriority: UBaseType_t,
    pub ulRunTimeCounter: u32,
    pub pxStackBase: *mut StackType_t,
    pub usStackHighWaterMark: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of xTASK_STATUS"][::std::mem::size_of::<xTASK_STATUS>() - 72usize];
    ["Alignment of xTASK_STATUS"][::std::mem::align_of::<xTASK_STATUS>() - 8usize];
    ["Offset of field: xTASK_STATUS::xHandle"]
        [::std::mem::offset_of!(xTASK_STATUS, xHandle) - 0usize];
    ["Offset of field: xTASK_STATUS::pcTaskName"]
        [::std::mem::offset_of!(xTASK_STATUS, pcTaskName) - 8usize];
    ["Offset of field: xTASK_STATUS::xTaskNumber"]
        [::std::mem::offset_of!(xTASK_STATUS, xTaskNumber) - 16usize];
    ["Offset of field: xTASK_STATUS::eCurrentState"]
        [::std::mem::offset_of!(xTASK_STATUS, eCurrentState) - 24usize];
    ["Offset of field: xTASK_STATUS::uxCurrentPriority"]
        [::std::mem::offset_of!(xTASK_STATUS, uxCurrentPriority) - 32usize];
    ["Offset of field: xTASK_STATUS::uxBasePriority"]
        [::std::mem::offset_of!(xTASK_STATUS, uxBasePriority) - 40usize];
    ["Offset of field: xTASK_STATUS::ulRunTimeCounter"]
        [::std::mem::offset_of!(xTASK_STATUS, ulRunTimeCounter) - 48usize];
    ["Offset of field: xTASK_STATUS::pxStackBase"]
        [::std::mem::offset_of!(xTASK_STATUS, pxStackBase) - 56usize];
    ["Offset of field: xTASK_STATUS::usStackHighWaterMark"]
        [::std::mem::offset_of!(xTASK_STATUS, usStackHighWaterMark) - 64usize];
};
pub type TaskStatus_t = xTASK_STATUS;
pub const eSleepModeStatus_eAbortSleep: eSleepModeStatus = 0;
pub const eSleepModeStatus_eStandardSleep: eSleepModeStatus = 1;
pub const eSleepModeStatus_eNoTasksWaitingTimeout: eSleepModeStatus = 2;
pub type eSleepModeStatus = ::std::os::raw::c_uint;
unsafe extern "C" {
    pub fn xTaskCreate(
        pxTaskCode: TaskFunction_t,
        pcName: *const ::std::os::raw::c_char,
        uxStackDepth: usize,
        pvParameters: *mut ::std::os::raw::c_void,
        uxPriority: UBaseType_t,
        pxCreatedTask: *mut TaskHandle_t,
    ) -> BaseType_t;
}
unsafe extern "C" {
    pub fn xTaskCreateStatic(
        pxTaskCode: TaskFunction_t,
        pcName: *const ::std::os::raw::c_char,
        uxStackDepth: usize,
        pvParameters: *mut ::std::os::raw::c_void,
        uxPriority: UBaseType_t,
        puxStackBuffer: *mut StackType_t,
        pxTaskBuffer: *mut StaticTask_t,
    ) -> TaskHandle_t;
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n void vTaskDelete( TaskHandle_t xTaskToDelete );\n @endcode\n\n INCLUDE_vTaskDelete must be defined as 1 for this function to be available.\n See the configuration section for more information.\n\n Remove a task from the RTOS real time kernel's management.  The task being\n deleted will be removed from all ready, blocked, suspended and event lists.\n\n NOTE:  The idle task is responsible for freeing the kernel allocated\n memory from tasks that have been deleted.  It is therefore important that\n the idle task is not starved of microcontroller processing time if your\n application makes any calls to vTaskDelete ().  Memory allocated by the\n task code is not automatically freed, and should be freed before the task\n is deleted.\n\n See the demo application file death.c for sample code that utilises\n vTaskDelete ().\n\n @param xTaskToDelete The handle of the task to be deleted.  Passing NULL will\n cause the calling task to be deleted.\n\n Example usage:\n @code{c}\n void vOtherFunction( void )\n {\n TaskHandle_t xHandle;\n\n   // Create the task, storing the handle.\n   xTaskCreate( vTaskCode, \"NAME\", STACK_SIZE, NULL, tskIDLE_PRIORITY, &xHandle );\n\n   // Use the handle to delete the task.\n   vTaskDelete( xHandle );\n }\n @endcode\n \\defgroup vTaskDelete vTaskDelete\n \\ingroup Tasks"]
    pub fn vTaskDelete(xTaskToDelete: TaskHandle_t);
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n void vTaskDelay( const TickType_t xTicksToDelay );\n @endcode\n\n Delay a task for a given number of ticks.  The actual time that the\n task remains blocked depends on the tick rate.  The constant\n portTICK_PERIOD_MS can be used to calculate real time from the tick\n rate - with the resolution of one tick period.\n\n INCLUDE_vTaskDelay must be defined as 1 for this function to be available.\n See the configuration section for more information.\n\n\n vTaskDelay() specifies a time at which the task wishes to unblock relative to\n the time at which vTaskDelay() is called.  For example, specifying a block\n period of 100 ticks will cause the task to unblock 100 ticks after\n vTaskDelay() is called.  vTaskDelay() does not therefore provide a good method\n of controlling the frequency of a periodic task as the path taken through the\n code, as well as other task and interrupt activity, will affect the frequency\n at which vTaskDelay() gets called and therefore the time at which the task\n next executes.  See xTaskDelayUntil() for an alternative API function designed\n to facilitate fixed frequency execution.  It does this by specifying an\n absolute time (rather than a relative time) at which the calling task should\n unblock.\n\n @param xTicksToDelay The amount of time, in tick periods, that\n the calling task should block.\n\n Example usage:\n\n void vTaskFunction( void * pvParameters )\n {\n // Block for 500ms.\n const TickType_t xDelay = 500 / portTICK_PERIOD_MS;\n\n   for( ;; )\n   {\n       // Simply toggle the LED every 500ms, blocking between each toggle.\n       vToggleLED();\n       vTaskDelay( xDelay );\n   }\n }\n\n \\defgroup vTaskDelay vTaskDelay\n \\ingroup TaskCtrl"]
    pub fn vTaskDelay(xTicksToDelay: TickType_t);
}
